[build-system]
requires = [
    "packaging>=23.2",
    "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "gobot"
version = "0.1.11"
description = "Python bindings for the Gobot robotics scene, simulation, and rendering engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "RobSimulatorGroup" },
]
dependencies = [
    "numpy>=2,<3",
    "onnxruntime>=1.19",
    "scipy>=1.11",
]

[project.urls]
Homepage = "https://github.com/RobSimulatorGroup/gobot"
Repository = "https://github.com/RobSimulatorGroup/gobot"
Issues = "https://github.com/RobSimulatorGroup/gobot/issues"

[project.scripts]
gobot_editor = "gobot_cli.editor:editor"

[project.optional-dependencies]
train = [
    "rsl-rl-lib==5.2.0",
    "tensorboard",
    "tensordict",
    "torch>=2.7",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", extra = "train", marker = "sys_platform == 'linux'" },
]

[tool.scikit-build]
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
wheel.packages = ["python/gobot", "python/gobot_cli"]

[tool.scikit-build.install]
components = ["python"]

[tool.scikit-build.cmake.define]
GOB_BUILD_TESTS = "OFF"
