[build-system]
requires = [
    "packaging>=23.2",
    "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "gobot"
version = "0.1.14"
description = "Python bindings for the Gobot robotics scene, simulation, and rendering engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "RobSimulatorGroup" },
]
dependencies = [
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "mujoco==3.10.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "mujoco-warp==3.10.0.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "numpy>=2,<3",
    "onnx>=1.16",
    "onnxruntime>=1.19",
    "rsl-rl-lib==5.2.0",
    "scipy>=1.11",
    "tensorboard",
    "tensordict",
    "torch>=2.7; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "warp-lang==1.14.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[project.urls]
Homepage = "https://github.com/RobSimulatorGroup/gobot"
Repository = "https://github.com/RobSimulatorGroup/gobot"
Issues = "https://github.com/RobSimulatorGroup/gobot/issues"

[project.scripts]
gobot_editor = "gobot_cli.editor:editor"

[dependency-groups]
dev = [
    "packaging>=23.2",
    "scikit-build-core>=0.10",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[tool.scikit-build]
cmake.version = ">=3.26"
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
wheel.packages = ["python/gobot", "python/gobot_cli"]

[tool.scikit-build.install]
components = ["python"]

[tool.scikit-build.cmake.define]
GOB_BUILD_TESTS = "OFF"
GOB_BUILD_LUISA_RENDERER = "ON"
GOB_FORCE_FETCH_MUJOCO = "ON"
GOB_MUJOCO_GIT_TAG = "3.10.0"
